--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,9 +1,4 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: sans-serif;
-}
+
 
 /*no pude arreglar lo del html de contacto al hacerlo responsive y se me termino rompiendo en desktop tambien*/
 header{
@@ -11,11 +6,10 @@ header{
     justify-content: space-between;
     background-color: #2C4F74;
     align-items: center;
-}
-header h2{
-    color: whitesmoke;
-    font-size: 200%;
-    
+    h2{
+        color: whitesmoke;
+        font-size: 200%;
+    }
 }
 .auto-1{
     width: 100%;
@@ -44,10 +38,9 @@ nav a:hover{
     color: navajowhite;
 }
 
-                /* fin barra navegacion*/
+            /* fin barra navegacion*/
 
             /* boton para agendar citas*/
-
 
 .boton-agendar{
     width: 15%;
@@ -62,9 +55,7 @@ nav a:hover{
     cursor: pointer;
 }
 
-
             /* fin boton para agendar citas*/
-
 
 .encabezado{
     align-items: center;
@@ -81,37 +72,29 @@ nav a:hover{
     grid-area: text-taller;
     text-align: center;
     margin: 10px;
-}
-.text-taller h2 {
-    margin: 10px;
-}
-
+    h2 {
+        margin: 10px;
+    }
 .img-taller{
     grid-area: img-taller;
     gap: 1rem; 
     margin: 20px;
-    justify-content: center;
-   
+    justify-content: center;  
+    }
 }
-
-
             /* zona cuidados*/
-
 
 .cuidados{
     text-align: center;
     box-shadow: 10px 10px 10px grey;
     border-radius: 15px;
     background-color: rgba(229, 228, 228, 2);
-
     padding-bottom: 30px;
 }
 section h2{
     padding-top: 15px;
 }
-.test {
-    padding-top: 15px;
-}
+
 .cuidados-colum{
     margin: 10px;
     border-radius: 10px;
@@ -121,38 +104,52 @@ section h2{
     background-color: rgba(229, 228, 228, 2);
     text-align: center;
     padding: 10px;
-}
-.cuidados-colum h2{
-    color: red;
-    padding: 10px;
-}
-.cuidados-colum h3{
-    padding: 10px;
-}
-.cuidados-colum p{
-    margin: 20px;
+    h2{
+        color: red;
+        padding: 10px;
+    }
+    h3{
+        padding: 10px;
+    }
+    p{
+        margin: 20px;
+    }
 }
 
             /* fin zona cuidados*/
 
-
-
-
             /* zona testimonios*/
-.testimonios{
-    text-align: center;
-    box-shadow: 10px 10px 5px grey;
-    background-color: lightgray;
-    padding-bottom: 30px;
-
-}
+            .testimonios {
+                padding: 40px 20px;
+                background-color: #f4f4f4;
+                text-align: center;
+                h2 {
+                    font-size: 2rem;
+                    margin-bottom: 30px;
+                    color: #333;
+                  }
+                  .comentario {
+                    max-width: 600px;
+                    margin: 20px auto;
+                    background-color: white;
+                    padding: 20px;
+                    border-radius: 12px;
+                    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+                    p {
+                        font-weight: bolder;
+                        font-style: italic;
+                        color: #444;
+                        margin-bottom: 10px;
+                      }
+                      span {
+                        font-weight: bold;
+                        color: #007bff;
+                      }
+                  }
+            }
             /*fin zona testimonios*/
 
-
-
              /* NOSOTROS*/
-
-
 .nosotros{
     text-align: center;
     text-decoration: underline;
@@ -173,15 +170,15 @@ hr{
     margin-bottom: 15px;
 }
 
-
              /* FIN NOSOTROS*/
 
              /* SERVICIOS */
-main h2{
+main {
+        h2{
     text-align: center;
     font-style: italic;
     margin-bottom: 40px;
-   
+        }
 }
 .trabajos1{
     display: grid;
@@ -200,9 +197,9 @@ main h2{
     text-align: center;
     margin: 10px;
     padding: 20px;
-}
-.text-trabajos1 p {
-    margin: 10px;
+    p {
+        margin: 10px;
+    }
 }
 .img-trabajo1{
     grid-area: img-trabajo1;
@@ -225,9 +222,9 @@ main h2{
     text-align: center;
     margin: 10px;
     padding: 20px;
-}
-.text-trabajos2 p {
-    margin: 10px;
+    p{
+        margin: 10px;
+    }
 }
 .img-trabajo2{
     grid-area: img-trabajo2;
@@ -239,10 +236,10 @@ main h2{
              /* FIN SERVICIOS */
 
              /* CONTACTOS */
-.contacto{
+.contacto1, .contacto2{
     display: flex;
     align-items: center;
-    padding-left: 250px;
+    justify-content: center;
 }
 .img-cont{
     align-items: center;
@@ -256,11 +253,57 @@ main h2{
 }
 
              /* FIN CONTACTOS */
-
-
-
+.tienda{
+    padding: 2rem;
+    background-color: #f9f9f9;
+    .titulo-tienda {
+        text-align: center;
+        font-size: 2rem;
+        margin-bottom: 2rem;
+      }
+      .productos {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        gap: 2rem;
+        .producto {
+            background: white;
+            padding: 1rem;
+            border-radius: 10px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            text-align: center;
+        
+            img {
+              max-width: 100%;
+              height: auto;
+              margin-bottom: 1rem;
+            }
+        
+            h3 {
+              margin: 0.5rem 0;
+            }
+        
+            p {
+              font-weight: bold;
+              margin-bottom: 1rem;
+            }
+        
+            .btn-comprar {
+              background-color: #2C4F74;
+              color: white;
+              border: none;
+              padding: 0.5rem 1rem;
+              border-radius: 5px;
+              cursor: pointer;
+              transition: background 0.3s;
+        
+              &:hover {
+                background-color: #03264b;
+              }
+            }
+          }
+      }
+}
             /* FOOTER*/
-
 
 footer{
     text-align: center; 
@@ -273,11 +316,10 @@ footer{
              /* MEDIA QUERY*/
 
 /* INDEX MOBILE*/
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
     .boton-agendar{
         width: 35%;
-        margin-left: 35%;
-       
+        margin-left: 35%; 
     }
     .encabezado {
         display: flex;
@@ -285,13 +327,13 @@ footer{
         align-items: center;
         padding: 10px;
         gap: 20px;
-    }
-    .encabezado div img{
-        width: 100%;
-        border-radius: 10px;
-        max-width: 250px; 
-        height: auto;
-        display: block;
+        div img{
+            width: 100%;
+            border-radius: 10px;
+            max-width: 250px; 
+            height: auto;
+            display: block;
+        }
     }
     section .cuidados-colum{
         display: grid;
@@ -300,7 +342,6 @@ footer{
         grid-area: 
         "fila1 fila11"
         "fila21 fila22";
-    
     }
 
 /*SERVICIOS*/
@@ -313,9 +354,7 @@ footer{
                 "texto";
             gap: 0;
             padding: 1rem;
-    }
-        
-        
+    }   
     .img-trabajo1 {
             grid-area: img;
             display: flex;
@@ -328,8 +367,7 @@ footer{
             padding: 5px;
             margin-bottom: 100px;
     }
-        
-       
+         
     .img-trabajo2 {
             grid-area: img;
             display: flex;
@@ -342,8 +380,6 @@ footer{
             padding: 10px;
             margin-bottom: 10px;
     }
-        
-       
     .img-trabajo1 img, .img-trabajo2 img {
             width: 100%;
             height: auto;
@@ -352,16 +388,76 @@ footer{
     }
 
 /*CONTACTO*/  
-main .contacto1 .contacto2 {
+main {
+    .contacto1, .contacto2 {
    display: flex;
-   flex-direction: row;
+   flex-direction: column;
    align-items: center;
    justify-content: center;
+   text-align: center;
+   
     }
-    .contacto1 .contacto2 .img-cont{
+    .contacto1, .contacto2 {
+        .img-cont{
         max-width: 100%;
         height: auto;
         display: block;
         margin: 0 auto; /* asegura centrado dentro del div */
-      }
+            }
+        }
+    }
 }
+//TABLET
+@media (max-width: 1024px) {
+    .boton-agendar{
+        width: 35%;
+        margin-left: 35%;
+    }
+    .encabezado {
+        display: flex;
+        flex-direction: column; 
+        align-items: center;
+        padding: 10px;
+        gap: 20px;
+        div img{
+            width: 100%;
+            border-radius: 10px;
+            max-width: 450px; 
+            height: auto;
+            display: block;
+        }
+    }
+    main {
+      .trabajos1,
+      .trabajos2 {
+        flex-direction: column; // Apila imagen y texto en tablet
+        text-align: center;
+        padding: 1rem;
+        flex: 1;
+  
+        .img-trabajo1,
+        .img-trabajo2 {
+          img {
+            max-width: 100%; //creo q las imagenes me quedan asi pq las descargue en medidas diferentes
+            height: 100%;
+          }
+        }
+      }
+    }
+    @media (max-width: 1024px) {
+        html, body {
+          height: 100%;
+          margin: 0;
+        }
+        body {
+          display: flex;
+          flex-direction: column;
+          min-height: 100vh;
+        }
+        main {
+          flex: 1;
+        }
+      }
+      
+  }
+  
